--- a/Auto Text Effect Animation/index.html
+++ b/Auto Text Effect Animation/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main class="flex justify-center items-center bg-orange-400 h-svh">
-      <h1 class="text-6xl font-bold">I am</h1>
+      <h1 class="text-6xl font-bold"></h1>
     </main>
   </body>
 
