bobile buy Website complete

--- a/Display Images/index.html
+++ b/Display Images/index.html
@@ -13,7 +13,7 @@
           <img
             src="images/gallery-1.jpg"
             alt=""
-            class="w-96 mx-auto"
+            class="w-96 mx-auto duration-500"
             id="big-img"
           />
         </div>
